[gd_scene load_steps=6 format=3 uid="uid://bbiyul7qtbw7n"]

[ext_resource type="Script" path="res://scripts/Results.gd" id="1_ha77j"]
[ext_resource type="Texture2D" uid="uid://d08ce57s1pjt" path="res://assets/woodTexture.png" id="2_qg8fj"]
[ext_resource type="Theme" uid="uid://vhiqa4vo0evm" path="res://themes/titleTheme.tres" id="3_fmqu1"]
[ext_resource type="Theme" uid="uid://03uyyc4o7nde" path="res://themes/btnNormal.tres" id="4_r3e6j"]
[ext_resource type="Theme" uid="uid://dfb6u5rqrhn66" path="res://themes/scrollContainer.tres" id="5_400nn"]

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ha77j")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_qg8fj")

[node name="Label" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -313.0
offset_top = 131.0
offset_right = 310.0
offset_bottom = 178.0
grow_horizontal = 2
theme = ExtResource("3_fmqu1")
theme_override_font_sizes/font_size = 35
text = "Resultados"
horizontal_alignment = 1

[node name="Button" type="Button" parent="."]
layout_mode = 1
offset_left = 55.0
offset_top = 45.0
offset_right = 192.0
offset_bottom = 100.0
theme = ExtResource("4_r3e6j")
theme_override_font_sizes/font_size = 30
text = "Atras"

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -319.0
offset_top = -446.0
offset_right = 312.0
offset_bottom = 590.0
grow_horizontal = 2
grow_vertical = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("5_400nn")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="getResults" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="request_completed" from="getResults" to="." method="_on_get_results_request_completed"]
